# research_pharma

./: .gitignore  MANIFEST.in  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
pharma_rd/: boot.py  hooks.py  modules.txt  setup_demo_data.py  tasks.py
pharma_rd/doctype/batch_manufacturing_record/: batch_manufacturing_record.json
pharma_rd/doctype/biological_target/: biological_target.json
pharma_rd/doctype/bmr_formula_line/: bmr_formula_line.json
pharma_rd/doctype/bmr_process_step/: bmr_process_step.json
pharma_rd/doctype/clinical_trial/: clinical_trial.json
pharma_rd/doctype/clinical_trial_site/: clinical_trial_site.json
pharma_rd/doctype/drug_candidate/: drug_candidate.json
pharma_rd/doctype/lab_equipment/: lab_equipment.json
pharma_rd/doctype/qc_test/: qc_test.json
pharma_rd/doctype/regulatory_correspondence/: regulatory_correspondence.json
pharma_rd/doctype/regulatory_submission/: regulatory_submission.json
pharma_rd/doctype/research_project/: research_project.json
pharma_rd/doctype/research_project_milestone/: research_project_milestone.json
pharma_rd/doctype/research_project_team_member/: research_project_team_member.json
pharma_rd/doctype/stability_study/: stability_study.json
pharma_rd/doctype/stability_timepoint/: stability_timepoint.json
pharma_rd/doctype/therapeutic_area/: therapeutic_area.json
pharma_rd/fixtures/: roles.json  therapeutic_areas.json
pharma_rd/notification/calibration_due_alert/: calibration_due_alert.json
pharma_rd/public/: build.json
pharma_rd/public/css/: pharma_rd.css
(+42 files in other folders)
